# robot_control

./: CMakeLists.txt  README.md  package.xml
launch/: servers.launch  turn_head.launch
msg/: TurnHead.msg
scripts/: actuate_gripper_service.py  all.sh  arm_movement_test.py  face_forward.py  game_service.py  get_gripper_status_server.py  get_gripper_status_service.py  get_joint_angles.py  get_robot_is_moving_service.py  get_xyz_service.py  goto_xyz_service.py  head_control.py  manipulate_head_service.py  move_arm_out_of_way_service.py  move_gripper_down_service.py  moveit_interface.py  open_close_gripper_client.py  open_close_gripper_client0.py  open_close_gripper_server.py  pick_and_place.py  robot_mood_service.py  sys  turn_head.py  xyz_launch.sh
srv/: BlockToPixel.srv  BlockToPoint.srv  GameInit.srv  GripperGrasping.srv  OpenGripper.srv  PanToAngle.srv  PickAndPlace.srv  PixelToPoint.srv  PointToPoint.srv  RobotMood.srv  XYZCommand.srv
